# Computer-Vision

./: README.md
age-estimation/: README.md  listOfImageFiles.txt  outfile.txt
age-estimation/src/: homework.cpp  homework.h  hw05.cpp  hw05.h  weights1.onnx  weights2.onnx  weights3.onnx
age-estimation/src/util/: DebugManager.cpp
coin-identification/: README.md
coin-identification/src/: homework.cpp  homework.h  hw02.cpp  hw02.h
coin-identification/src/util/: DebugManager.cpp
digit-recognition/: cnn_ann.ipynb  readme.md  test.rar
digit-recognition/cnn-ann/: CMakeLists.txt  cnn_ann.ipynb
digit-recognition/cnn-ann/src/: homework.h  hw03.cpp
digit-recognition/cnn-ann/src/weights/: cnn_model.onnx
digit-recognition/hog-ann/: hog_ann.ipynb
digit-recognition/hog-ann/src/: homework.cpp  hw03.cpp
digit-recognition/hog-ann/src/util/: DebugManager.h
digit-recognition/hog-ann/src/weights/: hog_ann_model.onnx
digit-recognition/hog-svm/: hog_svm.ipynb
digit-recognition/hog-svm/src/: hw03.cpp  hw03.h
digit_recognition/: CNN_ANN.ipynb
homography-estimation/: H01to00.txt  README.md
homography-estimation/src/: homework.cpp  homework.h  hw04.cpp  hw04.h
homography-estimation/src/util/: DebugManager.cpp
object-counting/: README.md
object-counting/src/: homework.cpp  homework.h  hw01.cpp  hw01.h
object-counting/src/util/: DebugManager.cpp
